--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,9 @@
 <body>
   <!-- your content here... -->
   <script src="js/scripts.js"></script>
-  {{ content }}
+  <div id="content">
+    {{ content }}
+  </div>
 </body>
 </html>
 
