--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-{% assign about = site.data.resume.about %}
+{% assign about = site.data.about %}
 
 <div class="section" id="about">
   <div class="header">Обо мне</div>
