--- a/css/main.scss
+++ b/css/main.scss
@@ -36,10 +36,23 @@ body {
 .card {
     display: flex;
     flex-direction: row;
+    margin: $margin*2 0;
     .leftside {
 	font-family: $fonts-header;
 	flex: 0 0 300px;
 	padding-right: $margin;
+	.name {
+	    font-size: 24px;
+	}
+	.level {
+	    font-size: 20px;
+	}
+	.link {
+	    font-style: italic;
+	    a {
+		color: $color;
+	    }
+	}
     }
     .rightside {
 	flex-basis: 100%;
@@ -121,7 +134,10 @@ body {
 	text-align: center;
 	border-bottom: $border;
 	margin: $margin*2 0;
-	
+    }
+    .quote {
+	text-align: center;
+	font-style: italic;
     }
 }
 
@@ -137,6 +153,13 @@ body {
 		    border: $border;
 		}
 	    }
+	}
+    }
+}
+
+#languages.section {
+    .card {
+	.leftside {
 	}
     }
 }
