--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,22 +5,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>A Basic HTML5 Template</title>
-  <meta name="description" content="A simple HTML5 Template for new projects.">
-  <meta name="author" content="SitePoint">
+  <title>{{ site.data.header.name }}</title>
+  <meta name="description" content="{{ site.data.header.desc }}">
+  <meta name="author" content="{{ site.data.header.name }}">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="{{ site.data.header.name }}">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
-  <meta property="og:image" content="image.png">
+  <meta property="og:url" content="https://konstantin-morenko.ru">
+  <meta property="og:description" content="{{ site.data.header.desc }}">
+  <meta property="og:image" content="{{ site.data.about.photo_file }}">
 
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 
