--- a/_includes/section.html
+++ b/_includes/section.html
@@ -9,6 +9,9 @@
   <div class="card">
     <div class="leftside">
       <div class="name">{{ card.name }}</div>
+      {% if card.speciality %}
+      <div class="speciallity">{{ card.speciality }}</div>
+      {% endif %}
       {% if card.level %}
         {% include lang-level.html level = card.level %}
       {% endif %}
