--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{{ site.data.header.name }}</title>
+  <title>{{ site.data.header.name }} | {{ site.data.header.roles | join: ", " }}</title>
   <meta name="description" content="{{ site.data.header.desc }}">
   <meta name="author" content="{{ site.data.header.name }}">
 
