--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,7 @@ body {
     margin: $margin*2 0;
     .leftside {
 	font-family: $fonts-header;
-	flex: 1 0.5 200px;
+	flex: 1 0.5 300px;
 	padding-right: $margin;
 	.name {
 	    font-size: 24px;
@@ -77,14 +77,6 @@ body {
 	}
 	.leftside {
 	    margin-bottom: $margin;
-	}
-    }
-}
-
-@media screen and (min-width: $layout-breakpoint-small+1) {
-    .card {
-	.leftside {
-	    flex-basis: 300px;
 	}
     }
 }
@@ -134,6 +126,7 @@ body {
 	text-align: center;
 	border-bottom: $border;
 	margin: $margin*2 0;
+	font-family: $fonts-header;
     }
     .quote {
 	text-align: center;
@@ -161,5 +154,56 @@ body {
     .card {
 	.leftside {
 	}
+    }
+}
+
+
+.cert-list {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    .certificate {
+	flex-basis: 320px;
+	margin: 2*$margin;
+	.title {
+	    font-family: $fonts-header;
+	    font-size: 20px;
+	    text-align: center;
+	    margin-bottom: $margin;
+	    border-bottom: 1px $color solid;
+	}
+	.description {
+	    text-align: center;
+	    font-style: italic;
+	}
+	.info {
+	    font-family: $fonts-header;
+	    margin-top: $margin;
+	    display: flex;
+	    .date {
+		flex-basis: 20%;
+		text-align: left;
+	    }
+	    .place {
+		text-align: center;
+		margin: 0 $margin;
+	    }
+	    .value {
+		flex-basis: 20%;
+		text-align: right;
+	    }
+		
+	}
+    }
+}
+
+#traits.traits {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    .trait {
+	flex-basis: 150px;
+	margin: $margin;
+	text-align: center;
     }
 }
