--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,10 @@
       <div class="text">{{ about.text }}</div>
       <div class="traits" id="traits">
 	{% for tr in about.traits %}
-	<div class="trait">{{ tr }}</div>
+	<div class="trait">
+	  <span class="material-icons">info</span>
+	  {{ tr }}
+	</div>
 	{% endfor %}
       </div>
     </div>
