--- a/_includes/certificates.html
+++ b/_includes/certificates.html
@@ -1,13 +1,18 @@
 {% assign certificates = site.data.certificates %}
 
 <div class="section" id="certificates">
-  <div class="header">{{ certificates.header }}</div>
+  <div class="header">
+    {{ certificates.header }}
+  </div>
 
   <div class="quote">{{ certificates.description }}</div>
   <div class="cert-list">
     {% for cert in certificates.list %}
     <div class="certificate">
-      <div class="title">{{ cert.title }}</div>
+      <div class="title">
+	<span class="material-icons">verified</span>
+	{{ cert.title }}
+      </div>
       <div class="description">{{ cert.description }}</div>
       <div class="info">
 	<div class="date">{{ cert.date }}</div>
