--- a/_includes/educations.html
+++ b/_includes/educations.html
@@ -29,7 +29,7 @@
       <div class="speciality">{{ ed.speciality }}</div>
       {% if ed.perfect %}
       <div class="perfect">
-	<span class="material-icons">local_activity</span> Диплом с отличием
+	<span class="material-icons">star</span> {{ ed.perfect }}
       </div>
       {% endif %}
       <div class="university">
