--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,16 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 
+  {% include yandex-counter.html %}
+
 </head>
 
 <body>
-  <!-- your content here... -->
-  <script src="js/scripts.js"></script>
+  <!-- <script src="js/scripts.js"></script> -->
   <div id="content">
     {{ content }}
   </div>
+
 </body>
 </html>
 
