New language levels

--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -17,7 +17,7 @@
 	<span class="material-icons">star_border</span>
 	<span class="material-icons">star_border</span>
 	{% endif %}
-	{% if level == "A2" %}
+	{% if level == "A2" or level == "A1/A2" %}
 	<span class="material-icons">star</span>
 	<span class="material-icons">star_border</span>
 	<span class="material-icons">star_border</span>
@@ -27,7 +27,7 @@
 	<span class="material-icons">star_half</span>
 	<span class="material-icons">star_border</span>
 	{% endif %}
-	{% if level == "B2" %}
+	{% if level == "B2" or level == "B1/B2" %}
 	<span class="material-icons">star</span>
 	<span class="material-icons">star</span>
 	<span class="material-icons">star_border</span>
@@ -37,7 +37,7 @@
 	<span class="material-icons">star</span>
 	<span class="material-icons">star_half</span>
 	{% endif %}
-	{% if level == "C2" %}
+	{% if level == "C2" or level == "C1/C2" %}
 	<span class="material-icons">star</span>
 	<span class="material-icons">star</span>
 	<span class="material-icons">star</span>
