--- a/css/main.scss
+++ b/css/main.scss
@@ -109,7 +109,7 @@ body {
 	    flex-flow: row wrap;
 	    justify-content: center;
 	    span {
-		margin: 0 $padding;
+		margin: 0 2*$padding;
 	    }
 	}
     }
