--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
       <div class="traits" id="traits">
 	{% for tr in about.traits %}
 	<div class="trait">
-	  <span class="material-icons">info</span>
+	  <span class="material-icons">grade</span>
 	  {{ tr }}
 	</div>
 	{% endfor %}
