--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 # FrontMatter to proper processing by SASS
 ---
 
+$background-color: white;
 $layout-breakpoint-small: 800px;
 $fonts-header: Georgia, serif;
 $fonts-default: Verdana,sans-serif;
@@ -134,6 +135,10 @@ body {
 	border-bottom: $border;
 	margin: $margin*2 0;
 	font-family: $fonts-header;
+	// Keeping sticky
+	position: sticky;
+	top: 0;
+	background-color: $background-color;
     }
     .quote {
 	text-align: center;
