--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,10 @@
     </div>
   </div>
   <div class="rightside">
+    <div class="place">
+      <span class="material-icons">location_city</span>
+      <abbr title="Этот город самый лучший город на Земле">Москва</abbr>
+    </div>
     <div class="links">
       {% for link in header.links %}
       <div class="link">
