--- a/css/main.scss
+++ b/css/main.scss
@@ -119,6 +119,10 @@ body {
     }
 }
 
+#header .place {
+    margin-bottom: 16px;
+}
+
 @media screen and (max-width: $layout-breakpoint-small) {
     #header.card {
 	.leftside {
