--- a/css/main.scss
+++ b/css/main.scss
@@ -123,6 +123,14 @@ body {
     margin-bottom: 16px;
 }
 
+#slogan.quote {
+    text-align: center;
+    font-style: italic;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    margin: 16px 0;
+}
+
 @media screen and (max-width: $layout-breakpoint-small) {
     #header.card {
 	.leftside {
