--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,5 +29,5 @@
   </div>
 </div>
 <div id="slogan" class="quote">
-  Mi serĉas Pafistinon
+  <abbr title="Для тех, кто знает, что это значит">Mi serĉas Pafistinon</abbr>
 </div>
