--- a/css/main.scss
+++ b/css/main.scss
@@ -49,11 +49,16 @@ body {
 	font-family: $fonts-header;
 	flex: 1 0.5 300px;
 	padding-right: $margin;
+	line-height: 1.3;
+	.level {
+	    font-size: 18px;
+	}
 	.name {
 	    font-size: 24px;
+	    margin: 16px 0 8px 0;
 	}
-	.level {
-	    font-size: 20px;
+	.speciality {
+	    margin: 8px 0 24px 0;
 	}
 	.link {
 	    font-style: italic;
