--- a/css/main.scss
+++ b/css/main.scss
@@ -128,6 +128,11 @@ body {
     margin-bottom: 16px;
 }
 
+#header details summary {
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+
 #slogan.quote {
     text-align: center;
     font-style: italic;
