--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,10 +9,10 @@
     </div>
   </div>
   <div class="rightside">
-    <div class="link-block place">
+    <!-- <div class="link-block place">
       <span class="material-icons">location_city</span>
       <abbr title="Этот город самый лучший город на Земле">Москва</abbr>
-    </div>
+    </div> -->
     <div class="link-block zodiac">
       <img src="sagittarius.svg" style="height: 16px;">
       <abbr title="Да, и горжусь этим">Стрелец</abbr>
