Programming language added

--- a/_includes/microchip.html
+++ b/_includes/microchip.html
@@ -14,6 +14,7 @@
 	{{ mc.name }}
       </div>
       <div class="platform" title="Платформа">{{ mc.platform }}</div>
+      <div class="language">Язык: {{ mc.language }}</div>
       <div class="years" title="Периоды разработки">
 	<span class="material-icons">calendar_month</span>
 	{{ mc.years }}
