Messages moved to span

--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,10 @@ body {
     margin: $margin;
 }
 
+abbr, span[title] {
+    text-decoration: underline dotted;
+}
+
 .card {
     display: flex;
     flex-direction: row;
