--- a/_includes/microchip.html
+++ b/_includes/microchip.html
@@ -13,14 +13,14 @@
       <div class="name">
 	{{ mc.name }}
       </div>
-      <div class="platform" title="Платформа">{{ mc.platform }}</div>
+      <div class="platform"><span title="Платформа">{{ mc.platform }}</span></div>
       <div class="language">Язык: {{ mc.language }}</div>
-      <div class="years" title="Периоды разработки">
+      <div class="years">
 	<span class="material-icons">calendar_month</span>
-	{{ mc.years }}
+	<span title="Периоды разработки">{{ mc.years }}</span>
       </div>
-      <div class="sloc" title="Source Lines of Code / Количество строк кода">
-	SLOC: {{ mc.SLOC }}
+      <div class="sloc">
+	<abbr title="Source Lines of Code / Количество строк кода">SLOC</abbr>: {{ mc.SLOC }}
       </div>
       {% if mc.link %}
       <div class="link"><a href="{{ mc.link.url }}">{{ mc.link.name }}</a></div>
