--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
     </div> -->
     <div class="link-block zodiac">
       <img src="sagittarius.svg" style="height: 16px;">
-      <abbr title="Да, и горжусь этим">Стрелец</abbr>
+      <span title="Да, и горжусь этим">Стрелец</span>
     </div>
     {% for link_block in header.link_blocks %}
     <details class="link-block {{ link_block.id }}"
@@ -42,5 +42,5 @@
   </div>
 </div>
 <div id="slogan" class="quote">
-  <abbr title="Для тех, кто знает, что это значит">Mi serĉas Pafistinon</abbr>
+  <span title="Для тех, кто знает, что это значит">Mi serĉas Pafistinon</span>
 </div>
