--- a/_includes/science.html
+++ b/_includes/science.html
@@ -8,7 +8,7 @@
 
   {% if science.link_block %}
   <div class="link-block">
-    {% for ln in scienct.link_block %}
+    {% for ln in science.link_block %}
     <div class="link">
       {{ ln.prefix }}:
       <a href="{{ ln.link }}">{{ ln.text }}</a>
