link-block as _include

--- a/_includes/books.html
+++ b/_includes/books.html
@@ -6,14 +6,7 @@
   <div class="quote">{{ books.description }}</div>
 
   {% if books.link_block %}
-  <div class="link-block">
-    {% for ln in books.link_block %}
-    <div class="link">
-      {{ ln.prefix }}:
-      <a href="{{ ln.link }}">{{ ln.text }}</a>
-    </div>
-    {% endfor %}
-  </div>
+  {% include link-block.html block=books.link_block %}
   {% endif %}
 
   {% for bk in books.cards %}
